# horizon-cisco-ui

./: .gitignore  .gitreview  AUTHORS  CONTRIBUTING.rst  ChangeLog  README.rst  _40_cisco.py  _40_router.py  babel-django.cfg  babel-djangojs.cfg  babel.cfg  dev_install.sh  manage.py  package.json  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
cisco/: dashboard.py
cisco/locale/: django.pot  djangojs.pot
cisco/nexus1000v/: panel.py  urls.py  views.py
cisco/test/: .secret_key_store  settings.py
doc/source/: conf.py  index.rst
doc/source/releases/: 1.0.0.rst
doc/source/sourcecode/: autoindex.rst
doc/source/sourcecode/cisco/: cisco.dashboard.rst  cisco.models.rst  cisco.nexus1000v.forms.rst  cisco.nexus1000v.panel.rst  cisco.nexus1000v.rst  cisco.nexus1000v.tables.rst  cisco.nexus1000v.tabs.rst  cisco.nexus1000v.urls.rst  cisco.nexus1000v.views.rst  cisco.rst  cisco.version.rst
horizon-cisco-ui/locale/: horizon-cisco-ui.pot
horizon_cisco_ui/: _40_enable_cisco_dashboard.py  api.py  overrides.py  version.py
horizon_cisco_ui/cisco/: dashboard.py
horizon_cisco_ui/cisco/asr1k/: panel.py  tables.py  tabs.py  urls.py  views.py
horizon_cisco_ui/cisco/asr1k/hosting_device_templates/: tables.py  tabs.py  urls.py  views.py
horizon_cisco_ui/cisco/asr1k/hosting_devices/: tables.py  tabs.py  urls.py  views.py
horizon_cisco_ui/cisco/device_management/: panel.py  tabs.py  urls.py  views.py
horizon_cisco_ui/cisco/device_management/hosting_device_templates/: tables.py  tabs.py  urls.py  views.py
horizon_cisco_ui/cisco/device_management/hosting_devices/: tables.py  tabs.py  tests.py  urls.py  views.py
horizon_cisco_ui/cisco/dfa/: dfa_client.py  forms.py  panel.py  tables.py  tabs.py  urls.py  views.py  workflows.py
horizon_cisco_ui/cisco/dfa/test/: dfa_client_test.py  dfa_horizon_test.py  test_data.py
horizon_cisco_ui/cisco/locale/: django.pot  djangojs.pot
horizon_cisco_ui/cisco/nexus1000v/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
horizon_cisco_ui/cisco/router_types/: panel.py  tables.py  tabs.py  urls.py  views.py
horizon_cisco_ui/cisco/router_types/routers/: forms.py  tables.py  urls.py  views.py
horizon_cisco_ui/cisco/routers/: panel.py  tables.py  tabs.py  urls.py  views.py
horizon_cisco_ui/cisco/test/: settings.py
horizon_cisco_ui/dashboards/project/instances/: tests.py
horizon_cisco_ui/enabled/: _1441_project_routers_panel.py  _6000_cisco.py  _6010_nexus1000v.py  _6020_asr1k.py  _6020_device_management.py  _6020_dfa.py  _6030_routers.py  _6040_router_types.py
horizon_cisco_ui/firewalls/: views.py
horizon_cisco_ui/locale/: django.pot  djangojs.pot
horizon_cisco_ui/locale/en_GB/LC_MESSAGES/: django.po
horizon_cisco_ui/test/: helpers.py  settings.py  test_data.py
tools/: install.sh  tox_install.sh
(+26 files in other folders)
