[metadata]
name = horizon-cisco-ui
summary = Cisco Plugin for the OpenStack Dashboard
description-file =
    README.rst
author = Cisco Systems, Inc.
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/horizon-cisco-ui
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = 
  horizon_cisco_ui.cisco
  horizon_cisco_ui.firewalls

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[compile_catalog]
domain = horizon_cisco_ui
directory = horizon_cisco_ui/locale

[update_catalog]
domain = horizon_cisco_ui
output_dir = horizon_cisco_ui/locale
input_file = horizon_cisco_ui/locale/django.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = horizon_cisco_ui/locale/django.pot

[nosetests]
verbosity=2
detailed-errors=1
